k8s-monitoring/prometheus/k8s-prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yaml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/prometheus.yaml
              subPath: prometheus.yaml
            - name: rules-volume
              mountPath: /etc/prometheus/rules/rules.yaml
              subPath: rules.yaml
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
      - configMap:
          defaultMode: 420
          name: prometheus-config
        name: config-volume
      - configMap:
          defaultMode: 420
          name: prometheus-rules
        name: rules-volume
      - name: prometheus-storage-volume
        emptyDir: {}
