k8s-monitoring/prometheus/k8s-prometheus-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: monitoring
spec:
  serviceName: prometheus
  replicas: 2
  selector:
    matchLabels:
      app: prometheus
  volumeClaimTemplates:
  - metadata:
      name: prometheus-metrics-db
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 30Gi
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
        runAsNonRoot: true
      containers:
      - args:
        - "--storage.tsdb.path=/data"
        - "--storage.tsdb.retention=130d"
        - "--config.file=/etc/prometheus/prometheus.yaml"
        name: prometheus
        image: prom/prometheus
        volumeMounts:
          - name: config-volume
            mountPath: /etc/prometheus/prometheus.yaml
            subPath: prometheus.yaml
          - name: rules-general
            mountPath: /etc/prometheus/rules/rules.yaml
            subPath: rules.yaml
          - name: prometheus-metrics-db
            mountPath: /data
        ports:
        - containerPort: 9090
      volumes:
        - name: config-volume
          configMap:
           name: prometheus-config
        - name: rules-general
          configMap:
           name: rules-volume
