k8s-monitoring/prometheus/k8s-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  ports:
    - name: dashboard
      port: 8080
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus-server
  sessionAffinity: None
  type: ClusterIP
