k8s-monitoring/prometheus/k8s-prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
#    traefik.ingress.kubernetes.io/redirect-entry-point: https
#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: prometheus-dashboard
  namespace: monitoring
spec:
  rules:
  - host: prometheus-dashboard.local
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 8080
#  tls:
#  - secretName: prometheus-dashboard-ssl
